feat: added DELETE handler
