# swagger.yaml
@@ -56,11 +56,27 @@ paths:
             tags:
                 - products
     /products/{id}:
+        delete:
+            description: Deletes Product by ID
+            operationId: deleteProduct
+            parameters:
+                - description: The ID of the product in the database
+                  format: int64
+                  in: path
+                  name: id
+                  required: true
+                  type: integer
+                  x-go-name: ID
+            responses:
+                "204":
+                    $ref: '#/responses/noContent'
+            tags:
+                - products
         put:
-            description: Returns a list of Products
+            description: Updates Product by ID
             operationId: putProduct
             parameters:
-                - description: The ID of the product to update in the database
+                - description: The ID of the product in the database
                   format: int64
                   in: path
                   name: id
@@ -75,6 +91,8 @@ paths:
 produces:
     - application/json
 responses:
+    noContent:
+        description: ""
     productResponse:
         description: Product returns in the response
         schema:
